<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_xml"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#000000">
        <TextView
            android:id="@+id/principal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#ee330e"
            android:textSize="18sp"
            android:text="@string/principal"/>

		<TextView
    		android:id="@+id/second_text"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            android:layout_centerVertical="true"
    		android:layout_alignParentRight="true"
    		android:textSize="15sp"
    		android:textColor="#FFFFFF"
    		android:text="@string/second" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
		android:layout_marginTop="20dp">
		
        
			<!--  DURATION -->
        
        
		<TextView
		    android:id="@+id/duration_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/duration_text"
		    android:layout_marginLeft="15dp"
		    android:textSize="13sp"
		    android:textColor="#ee330e"/>
		<TextView
		    android:id="@+id/duration_count"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/duration_text"
		    android:text="@string/duration_count"
		    android:layout_alignLeft="@id/duration_text"
		    android:textColor="#ee330e"
		    android:textSize="32sp"/>
		
		
			<!--  DISTANCE -->
		
		
		<TextView
		    android:id="@+id/distance_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/distance_count"
		    android:text="@string/distance_text"
		    android:textSize="13sp"
		    android:textColor="#ee330e"/>
		<TextView
		    android:id="@+id/distance_count"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/distance_text"
		    android:layout_toLeftOf="@+id/distance_unit"
		    android:text="@string/distance_count"
		    android:textColor="#ee330e"
		    android:textSize="32sp"/>
		<TextView
		    android:id="@+id/distance_unit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignRight="@+id/up_right"
		    android:layout_alignBottom="@id/distance_count"
		    android:text="@string/distance_unit"
		    android:layout_marginRight="15dp"
		    android:layout_marginLeft="5dp"
		    android:textColor="#ee330e"
		    android:textSize="20sp"/>
		
				<!-- CITY -->
				
		<TextView 
		    android:id="@+id/city_location" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:textColor="#ee330e"
		    android:textSize="25sp"/>
				
			<!-- Image Background -->
			
		<ImageView
		    android:id="@+id/up_left"
		    android:layout_width="193dp"
		    android:layout_height="100dp"
		    android:layout_below="@id/duration_count"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="1dp"
		    android:layout_marginRight="1dp"
		    android:background="@drawable/up_left"
		    android:contentDescription="@string/up_left"/>
		
		<ImageView
		    android:id="@+id/up_right"
		    android:layout_width="193dp"
		    android:layout_height="100dp"
		    android:layout_marginBottom="1dp"
		    android:layout_marginRight="1dp"
		    android:layout_toRightOf="@id/up_left"
		    android:layout_alignTop="@id/up_left"
		    android:background="@drawable/up_right"
		    android:contentDescription="@string/up_right"/>
		
		<ImageView
		    android:id="@+id/down_left"
		    android:layout_width="193dp"
		    android:layout_height="100dp"
		    android:layout_marginTop="1dp"
		    android:layout_marginRight="1dp"
		    android:layout_below="@id/up_left"
		    android:background="@drawable/down_left"
		    android:layout_alignLeft="@id/up_left"
		    android:contentDescription="@string/down_left"/>
		
		<ImageView
		    android:id="@+id/down_right"
		    android:layout_width="193dp"
		    android:layout_height="100dp"
		    android:layout_marginTop="1dp"
		    android:layout_marginRight="1dp"
		    android:layout_toRightOf="@id/down_left"
		    android:layout_below="@id/up_right"
		    android:background="@drawable/down_right"
		    android:contentDescription="@string/down_right"/>
		
			<!--  Speed -->		
		
		<ImageView
		    android:id="@+id/speed_icon"
		    android:layout_width="25dp"
		    android:layout_height="20dp"
		    android:layout_alignLeft="@id/up_left"
		    android:layout_alignTop="@id/up_left"
		    android:layout_marginTop="20dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/speed_icon"
		    android:contentDescription="@string/speed_icon"/>
		
		<TextView
		    android:id="@+id/speed_count"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignTop="@id/up_left"
		    android:layout_toRightOf="@id/speed_icon"
		    android:layout_marginLeft="10dp"
		    android:layout_marginTop="18dp"
		    android:text="@string/speed_count"
		    android:textColor="#3d3d3d"
		    android:textSize="30sp"/>
		
		<TextView
		    android:id="@+id/speed_unit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@id/speed_count"
		    android:layout_toRightOf="@id/speed_count"
		    android:layout_marginLeft="5dp"
		    android:text="@string/speed_unit"
		    android:textColor="#3d3d3d"
		    android:textSize="20sp"/>
		
		<TextView
		    android:id="@+id/speed_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/speed_count"
		    android:layout_alignLeft="@id/speed_count"
		    android:layout_marginTop="10dp"
		    android:text="@string/speed_text"
		    android:textColor="#000000"
		    android:textSize="15sp"/>
		
		
			<!--  Altitude -->		
		
		
		
		<ImageView
		    android:id="@+id/altitude_icon"
		    android:layout_width="25dp"
		    android:layout_height="25dp"
		    android:layout_alignLeft="@id/down_right"
		    android:layout_alignTop="@id/down_right"
		    android:layout_marginTop="20dp"
		    android:layout_marginLeft="20dp"
		    android:background="@drawable/mountain"
		    android:contentDescription="@string/mountain"/>
		
		<TextView
		    android:id="@+id/altitude_count"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignTop="@id/down_right"
		    android:layout_toRightOf="@id/altitude_icon"
		    android:layout_marginLeft="10dp"
		    android:layout_marginTop="18dp"
		    android:text="@string/altitude_count"
		    android:textColor="#3d3d3d"
		    android:textSize="30sp"/>
		
		<TextView
		    android:id="@+id/altitude_unit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@id/altitude_count"
		    android:layout_toRightOf="@id/altitude_count"
		    android:layout_marginLeft="5dp"
		    android:text="@string/altitude_unity"
		    android:textColor="#3d3d3d"
		    android:textSize="20sp"/>
		
		<TextView
		    android:id="@+id/altitude_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/altitude_count"
		    android:layout_alignLeft="@id/altitude_count"
		    android:layout_marginTop="10dp"
		    android:text="@string/altitude_text"
		    android:textColor="#3d3d3d"
		    android:textSize="15sp"/>
		
		
			<!--  CALORIE -->
		
		<ImageView
		    android:id="@+id/calorie_icon"
		    android:layout_width="20dp"
		    android:layout_height="25dp"
		    android:layout_alignLeft="@id/down_left"
		    android:layout_alignTop="@id/down_left"
		    android:layout_marginTop="18dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/icon_flame"
		    android:contentDescription="@string/calorie_icon"/>
		<TextView
		    android:id="@+id/calorie_count"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignTop="@id/down_left"
		    android:layout_toRightOf="@id/calorie_icon"
		    android:layout_marginLeft="10dp"
		    android:layout_marginTop="18dp"
		    android:text="@string/calorie_count"
		    android:textColor="#3d3d3d"
		    android:textSize="30sp"/>
		
		<TextView
		    android:id="@+id/calorie_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/calorie_count"
		    android:layout_alignLeft="@id/calorie_count"
		    android:layout_marginTop="10dp"
		    android:text="@string/calorie_text"
		    android:textColor="#3d3d3d"
		    android:textSize="15sp"/>
		
		
			<!--  SPEED AVERAGE -->		
		
		<ImageView
		    android:id="@+id/speed_average"
		    android:layout_width="25dp"
		    android:layout_height="20dp"
		    android:layout_alignLeft="@id/up_right"
		    android:layout_alignTop="@id/up_right"
		    android:layout_marginTop="20dp"
		    android:layout_marginLeft="20dp"
		    android:background="@drawable/speed_icon"
		    android:contentDescription="@string/speed_average"/>
		
		<TextView
		    android:id="@+id/average_speed"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignTop="@id/up_right"
		    android:layout_toRightOf="@id/speed_average"
		    android:layout_marginLeft="10dp"
		    android:layout_marginTop="18dp"
		    android:text="@string/average_speed_count"
		    android:textColor="#3d3d3d"
		    android:textSize="30sp"/>
		
		<TextView
		    android:id="@+id/average_speed_unit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@id/average_speed"
		    android:layout_toRightOf="@id/average_speed"
		    android:layout_marginLeft="5dp"
		    android:text="@string/speed_unit"
		    android:textColor="#3d3d3d"
		    android:textSize="20sp"/>
		
		<TextView
		    android:id="@+id/average_speed_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/average_speed"
		    android:layout_alignLeft="@id/average_speed"
		    android:layout_marginTop="10dp"
		    android:text="@string/average_speed_text"
		    android:textColor="#3d3d3d"
		    android:textSize="15sp"/>
		
		
			<!--  SHARE BUTTON -->		
		
		
		<ImageButton
			android:id="@+id/share_icon"
			android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_marginLeft="163dp"
		    android:layout_marginTop="70dp"
		    android:layout_alignTop="@id/up_left"
		    android:background="@drawable/share_icon"
		    android:contentDescription="@string/share_icon"/>
    </RelativeLayout>
    
		<!--  Button Activation -->
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		
		
		<ImageButton
		    android:id="@+id/duration_icon"
		    android:layout_width="80dp"
		    android:layout_height="80dp"
		    android:background="@drawable/duration_icon"
		    android:layout_alignParentLeft="true"
		    android:layout_marginLeft="30dp"
		    android:layout_marginTop="30dp"
		    android:contentDescription="@string/duration_icon"/>
		<ImageButton
		    android:id="@+id/distance_icon"
		    android:layout_width="80dp"
		    android:layout_height="80dp"
		    android:background="@drawable/distance_icon"
		   	android:layout_alignParentRight="true"
		   	android:layout_marginRight="30dp"
		   	android:layout_marginTop="30dp"
		    android:contentDescription="@string/distance_icon"/>
		<ImageButton
		    android:id="@+id/free_icon"
		    android:layout_width="80dp"
		    android:layout_height="80dp"
		    android:background="@drawable/free_run"
		   	android:layout_below="@+id/goal_text"
		   	android:layout_centerHorizontal="true"
		   	android:layout_marginTop="50dp"
		    android:contentDescription="@string/free_run"/>
		
		<TextView
            android:id="@+id/goal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/goal_text"
            android:textColor="#ee330e"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/goal_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/goal_text"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/goal_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_count"
                android:textColor="#ee330e"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/goal_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/distance_unit"
                android:textColor="#ee330e"
                android:textSize="13sp" />
        </LinearLayout>

        
        <ImageButton
        	android:id="@+id/start_training"
			android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:layout_alignParentBottom="true"
		    android:background="@drawable/start"
		    android:contentDescription="@string/start"/>
        
		<LinearLayout
		    android:id="@+id/activate_button" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_alignParentBottom="true"
		    android:visibility="gone">
		    <ImageButton
                android:id="@+id/pause_training"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="49"
                android:background="@drawable/pause_disable"
                android:contentDescription="@string/start" />
		    <ImageButton
		        android:id="@+id/padlock"
		        android:layout_width="wrap_content"
		        android:layout_height="50dp"
		        android:layout_weight="2"
		        android:background="@drawable/padlock_lock"
		        android:contentDescription="@string/lock"/>
            <ImageButton
                android:id="@+id/stop_training"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="49"
                android:background="@drawable/stop_disable"
                android:contentDescription="@string/start" />

		</LinearLayout>
    </RelativeLayout>
</LinearLayout>