<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_dialog"
    android:padding="10sp" >
    
    
    <TextView
        android:id="@+id/enter_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/enter_distance"
        android:textColor="#ee330e"
        android:textSize="25sp"/>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/distance_edit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/distance_unit"
            android:textColorHint="#ee330e"
            android:textColor="#ee330e"
			android:textCursorDrawable="@null"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_login_dist"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/dialog_submit" />

        <Button
            android:id="@+id/btn_cancel_dist"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/dialog_cancel" />
    </RelativeLayout>

</LinearLayout>